i can haz graphics

--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   pointer-events: none;
   margin: 0 auto;
   width: 90%; }
+  .logo img {
+    width: 100%; }
 
 .wrap {
   background-color: black;
