--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,16 @@ h1, h2, h3, h4, h5, h6{
     color: rgb(245, 245, 245);
 }
 
+h1{
+    &:before{
+        content: url('img/bannerLeft.svg');
+    }
+    
+    &:after{
+        content: url('img/bannerRight.svg');
+    }
+}
+
 p{
     @include sans;
 }
