--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   font-weight: normal;
   font-style: normal; }
 
+*, *:before, *:after {
+  box-sizing: border-box; }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'bebas_neueregular', helvetica, arial, sans-serif;
   color: whitesmoke; }
@@ -19,7 +22,16 @@ p {
 
 body {
   background: black;
-  margin: 0; }
+  margin: 0;
+  min-width: 320px; }
+
+.unionLogos {
+  width: 90%;
+  margin: 0 auto;
+  padding: 6px 5%; }
+  .unionLogos img {
+    width: 29%;
+    margin: 0 3% 0 0; }
 
 .logo {
   pointer-events: none;
