--- a/style.css
+++ b/style.css
@@ -49,29 +49,32 @@ body {
   .graphic img {
     width: 100%; }
   .graphic h4 {
+    text-align: center;
     margin: 0 auto;
     position: absolute;
     bottom: 0;
-    width: 80%;
+    width: 90%;
     height: 20%;
     background: white;
     color: #353435; }
     .graphic h4:before {
       content: "";
-      background: transparent url("img/bannerLeft.svg");
+      background: black;
+      -webkit-transform: rotate(45deg);
       position: absolute;
       left: -20%;
-      bottom: 0;
-      height: 20%; }
+      bottom: 6%;
+      height: 100%;
+      width: 28%; }
     .graphic h4:after {
       content: "";
-      background: transparent url("img/bannerRight.svg");
-      background-size: cover;
+      background: black;
+      -webkit-transform: rotate(-45deg);
       position: absolute;
-      bottom: 0;
+      bottom: 6%;
       right: -20%;
       height: 100%;
-      width: 36%; }
+      width: 28%; }
 
 .wrap {
   background-color: black;
