--- a/style.css
+++ b/style.css
@@ -54,27 +54,19 @@ body {
     position: absolute;
     bottom: 0;
     width: 90%;
+    left: 5%;
     height: 20%;
     background: white;
     color: #353435; }
-    .graphic h4:before {
-      content: "";
-      background: black;
-      -webkit-transform: rotate(45deg);
-      position: absolute;
-      left: -20%;
-      bottom: 6%;
-      height: 100%;
-      width: 28%; }
-    .graphic h4:after {
-      content: "";
-      background: black;
-      -webkit-transform: rotate(-45deg);
-      position: absolute;
-      bottom: 6%;
-      right: -20%;
-      height: 100%;
-      width: 28%; }
+  .graphic .bannerLeft, .graphic .bannerRight {
+    width: 19%;
+    height: 16%;
+    position: absolute;
+    bottom: 2%; }
+  .graphic .bannerLeft {
+    left: -5%; }
+  .graphic .bannerRight {
+    right: -5%; }
 
 .wrap {
   background-color: black;
