--- a/style.scss
+++ b/style.scss
@@ -41,7 +41,7 @@ h1{
 
 .date{
     width: 80%;
-    margin: 0 auto;
+    margin: 25px auto;
     background: white;
     padding: 6px;
     position: relative;
@@ -105,7 +105,7 @@ body{
     background: transparent;
     position: relative;
     width: 70%;
-    margin: 0 auto;
+    margin: 25px auto;
     text-align: center;
     img{
         width: 100%;
