--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,11 @@ h1{
     }
 }
 
+p{
+    color: white;
+    font: helvetica, arial, sans-serif;
+}
+
 .date{
     width: 80%;
     margin: 25px auto;
@@ -108,7 +113,12 @@ body{
     margin: 25px auto;
     text-align: center;
     img{
+        -webkit-transition: all 500ms cubic-bezier(0.000, 0.245, 0.490, 1.650); 
         width: 100%;
+        &:hover{
+            
+            -webkit-transform:scale(1.075);
+        }
     }
     h4{
         text-align: center;
