--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ h1:before {
 h1:after {
   content: url("img/bannerRight.svg"); }
 
+p {
+  color: white;
+  font: helvetica, arial, sans-serif; }
+
 .date {
   width: 80%;
   margin: 25px auto;
@@ -74,7 +78,10 @@ body {
   margin: 25px auto;
   text-align: center; }
   .graphic img {
+    -webkit-transition: all 500ms cubic-bezier(0, 0.245, 0.49, 1.65);
     width: 100%; }
+    .graphic img:hover {
+      -webkit-transform: scale(1.075); }
   .graphic h4 {
     text-align: center;
     margin: 0 auto;
