--- a/style.css
+++ b/style.css
@@ -78,10 +78,19 @@ body {
   margin: 25px auto;
   text-align: center; }
   .graphic img {
-    -webkit-transition: all 500ms cubic-bezier(0, 0.245, 0.49, 1.65);
+    -webkit-transition: all 500ms ease-in;
     width: 100%; }
-    .graphic img:hover {
-      -webkit-transform: scale(1.075); }
+  .graphic .normal {
+    opacity: 1; }
+    .graphic .normal:hover {
+      opacity: 0; }
+  .graphic .hover {
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0; }
+    .graphic .hover:hover {
+      opacity: 1; }
   .graphic h4 {
     text-align: center;
     margin: 0 auto;
