--- a/style.scss
+++ b/style.scss
@@ -113,13 +113,28 @@ body{
     margin: 25px auto;
     text-align: center;
     img{
-        -webkit-transition: all 500ms cubic-bezier(0.000, 0.245, 0.490, 1.650); 
+        //position: absolute;
+        //top: 0;
+        //-webkit-transition: all 500ms cubic-bezier(0.000, 0.245, 0.490, 1.650); 
+       -webkit-transition: all 500ms ease-in; 
         width: 100%;
+        // -webkit-transform:scale(1);
         &:hover{
-            
-            -webkit-transform:scale(1.075);
+             //-webkit-transform:scale(1.075);
         }
     }
+    .normal{
+        opacity:1;
+        &:hover{opacity: 0;}
+    }
+    .hover{
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        left: 0;
+        &:hover{opacity:1;}
+    }
+            
     h4{
         text-align: center;
         margin: 0 auto;
