--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1:after {
 
 p {
   color: white;
-  font: helvetica, arial, sans-serif; }
+  font-family: 'helvetica', 'arial', sans-serif; }
 
 .date {
   width: 80%;
@@ -49,7 +49,7 @@ p {
   vertical-align: middle; }
 
 p {
-  font-family: helvetica, arial, sans-serif; }
+  font-family: 'helvetica', 'arial', sans-serif; }
 
 body {
   background: black;
@@ -119,3 +119,14 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto; }
+
+.content {
+  width: 70%;
+  margin: 0 auto;
+  text-align: center; }
+  .content p {
+    font-size: 18px;
+    margin-top: 0; }
+  .content h3 {
+    font-size: 24px;
+    margin-bottom: 8px; }
