--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ $offBlack: rgb(53,52,53);
 }
 
 @mixin sans{
-    font-family: helvetica, arial, sans-serif;
+    font-family: 'helvetica', 'arial', sans-serif;
 }
 
 *, *:before, *:after{
@@ -41,7 +41,7 @@ h1{
 
 p{
     color: white;
-    font: helvetica, arial, sans-serif;
+   @include sans;
 }
 
 .date{
@@ -113,15 +113,8 @@ body{
     margin: 25px auto;
     text-align: center;
     img{
-        //position: absolute;
-        //top: 0;
-        //-webkit-transition: all 500ms cubic-bezier(0.000, 0.245, 0.490, 1.650); 
        -webkit-transition: all 500ms ease-in; 
         width: 100%;
-        // -webkit-transform:scale(1);
-        &:hover{
-             //-webkit-transform:scale(1.075);
-        }
     }
     .normal{
         opacity:1;
@@ -172,4 +165,18 @@ body{
     width: 100%;
     height: 100%;
     margin: 0 auto;
+}
+
+.content{
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+    p{
+        font-size: 18px;
+        margin-top: 0;
+    }
+    h3{
+        font-size: 24px;
+        margin-bottom: 8px;
+    }
 }
