--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ p {
     text-align: center;
     color: #353435;
     font-size: 32px;
-    z-index: 2; }
+    z-index: 2;
+    margin: 12px 0; }
   .date .bannerLeft, .date .bannerRight {
     width: 19%;
     height: 80%;
@@ -138,3 +139,55 @@ body {
       content: " - "; }
   .djs h2 {
     margin-top: 12px; }
+
+#countdown {
+  width: 60%;
+  margin: 0 20%;
+  text-align: center;
+  display: inline-block;
+  color: white;
+  font-family: 'bebas_neueregular', helvetica, arial, sans-serif; }
+
+/* jQuery Countdown styles 1.6.3. */
+.countdown_rtl {
+  direction: rtl; }
+
+.countdown_row {
+  clear: both;
+  width: 100%;
+  padding: 0px 2px;
+  text-align: center; }
+
+.countdown_show1 .countdown_section {
+  width: 98%; }
+
+.countdown_show2 .countdown_section {
+  width: 48%; }
+
+.countdown_show3 .countdown_section {
+  width: 32.5%; }
+
+.countdown_show4 .countdown_section {
+  width: 24.5%; }
+
+.countdown_show5 .countdown_section {
+  width: 19.5%; }
+
+.countdown_show6 .countdown_section {
+  width: 16.25%; }
+
+.countdown_show7 .countdown_section {
+  width: 14%; }
+
+.countdown_section {
+  display: block;
+  float: left;
+  text-align: center; }
+
+.countdown_amount {
+  font-size: 4em; }
+
+.countdown_descr {
+  display: block;
+  width: 100%;
+  font-size: 4em; }
