layer on responsize styles

--- a/style.css
+++ b/style.css
@@ -26,7 +26,18 @@ p {
   margin: 25px auto;
   background: white;
   padding: 6px;
-  position: relative; }
+  position: relative;
+  -webkit-transition: all 500ms ease-in;
+  -mox-transition: all 500ms ease-in;
+  -ms-transition: all 500ms ease-in;
+  -o-transition: all 500ms ease-in;
+  transition: all 500ms ease-in; }
+  @media screen and (min-width: 601px) {
+    .date {
+      position: absolute;
+      right: 5%;
+      top: 300px;
+      width: 45%; } }
   .date h2 {
     position: relative;
     text-align: center;
@@ -57,7 +68,18 @@ body {
 .unionLogos {
   width: 90%;
   margin: 0 auto;
-  padding: 6px 5%; }
+  padding: 6px 5%;
+  -webkit-transition: all 500ms ease-in;
+  -mox-transition: all 500ms ease-in;
+  -ms-transition: all 500ms ease-in;
+  -o-transition: all 500ms ease-in;
+  transition: all 500ms ease-in; }
+  @media screen and (min-width: 601px) {
+    .unionLogos {
+      position: absolute;
+      width: 45%;
+      left: 5%;
+      top: 0; } }
   .unionLogos img {
     width: 29%;
     margin: 0 3% 0 0; }
@@ -65,11 +87,23 @@ body {
 .logo {
   pointer-events: none;
   margin: 0 auto;
-  width: 90%; }
+  width: 90%;
+  -webkit-transition: all 500ms ease-in;
+  -mox-transition: all 500ms ease-in;
+  -ms-transition: all 500ms ease-in;
+  -o-transition: all 500ms ease-in;
+  transition: all 500ms ease-in; }
+  @media screen and (min-width: 601px) {
+    .logo {
+      position: absolute;
+      top: 35px;
+      left: 5%;
+      width: 45%; } }
   .logo img {
     width: 100%; }
 
 .graphic {
+  display: none;
   background: transparent;
   position: relative;
   width: 70%;
@@ -77,6 +111,10 @@ body {
   text-align: center; }
   .graphic img {
     -webkit-transition: all 500ms ease-in;
+    -mox-transition: all 500ms ease-in;
+    -ms-transition: all 500ms ease-in;
+    -o-transition: all 500ms ease-in;
+    transition: all 500ms ease-in;
     width: 100%; }
   .graphic .normal {
     opacity: 1; }
@@ -119,6 +157,7 @@ body {
   margin: 0 auto; }
 
 .content {
+  display: none;
   width: 70%;
   margin: 0 auto;
   text-align: center; }
@@ -133,6 +172,12 @@ body {
   width: 70%;
   margin: 0 auto;
   text-align: center; }
+  @media screen and (min-width: 601px) {
+    .djs {
+      width: 45%;
+      position: absolute;
+      top: 400px;
+      right: 5%; } }
   .djs h5 {
     margin: 0; }
     .djs h5:before, .djs h5:after {
@@ -146,7 +191,19 @@ body {
   text-align: center;
   display: inline-block;
   color: white;
-  font-family: 'bebas_neueregular', helvetica, arial, sans-serif; }
+  font-family: 'bebas_neueregular', helvetica, arial, sans-serif;
+  -webkit-transition: all 500ms ease-in;
+  -mox-transition: all 500ms ease-in;
+  -ms-transition: all 500ms ease-in;
+  -o-transition: all 500ms ease-in;
+  transition: all 500ms ease-in; }
+  @media screen and (min-width: 601px) {
+    #countdown {
+      position: absolute;
+      top: 15px;
+      right: 5%;
+      width: 45%;
+      margin: 20px 0; } }
 
 /* jQuery Countdown styles 1.6.3. */
 .countdown_rtl {
