graphics resize and arrange

--- a/style.css
+++ b/style.css
@@ -26,18 +26,13 @@ p {
   margin: 25px auto;
   background: white;
   padding: 6px;
-  position: relative;
-  -webkit-transition: all 500ms ease-in;
-  -mox-transition: all 500ms ease-in;
-  -ms-transition: all 500ms ease-in;
-  -o-transition: all 500ms ease-in;
-  transition: all 500ms ease-in; }
-  @media screen and (min-width: 601px) {
+  position: relative; }
+  @media screen and (min-width: 769px) {
     .date {
       position: absolute;
       right: 5%;
-      top: 300px;
-      width: 45%; } }
+      top: 120px;
+      width: 44%; } }
   .date h2 {
     position: relative;
     text-align: center;
@@ -52,9 +47,9 @@ p {
     bottom: 11%;
     z-index: 1; }
   .date .bannerLeft {
-    left: -10%; }
+    left: -8%; }
   .date .bannerRight {
-    right: -10%; }
+    right: -8%; }
 
 .star {
   font-size: 0.5em;
@@ -74,11 +69,11 @@ body {
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
-  @media screen and (min-width: 601px) {
+  @media screen and (min-width: 769px) {
     .unionLogos {
       position: absolute;
       width: 45%;
-      left: 5%;
+      left: 2%;
       top: 0; } }
   .unionLogos img {
     width: 29%;
@@ -93,22 +88,32 @@ body {
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
-  @media screen and (min-width: 601px) {
+  @media screen and (min-width: 769px) {
     .logo {
       position: absolute;
       top: 35px;
-      left: 5%;
+      left: 2%;
       width: 45%; } }
   .logo img {
     width: 100%; }
 
+@media screen and (min-width: 769px) {
+  .graphics {
+    position: relative;
+    margin-bottom: 55%;
+    text-align: center; } }
+
 .graphic {
-  display: none;
   background: transparent;
   position: relative;
   width: 70%;
   margin: 25px auto;
   text-align: center; }
+  @media screen and (min-width: 769px) {
+    .graphic {
+      float: left;
+      width: 27%;
+      margin: 0 3%; } }
   .graphic img {
     -webkit-transition: all 500ms ease-in;
     -mox-transition: all 500ms ease-in;
@@ -172,11 +177,11 @@ body {
   width: 70%;
   margin: 0 auto;
   text-align: center; }
-  @media screen and (min-width: 601px) {
+  @media screen and (min-width: 769px) {
     .djs {
       width: 45%;
       position: absolute;
-      top: 400px;
+      top: 325px;
       right: 5%; } }
   .djs h5 {
     margin: 0; }
@@ -197,7 +202,7 @@ body {
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
-  @media screen and (min-width: 601px) {
+  @media screen and (min-width: 769px) {
     #countdown {
       position: absolute;
       top: 15px;
