--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 $offBlack: rgb(53,52,53);
-$breakpoint: 'screen and (min-width: 601px)';
+$breakpoint: 'screen and (min-width: 769px)';
 
 @font-face {
     font-family: 'bebas_neueregular';
@@ -63,12 +63,12 @@ p{
     background: white;
     padding: 6px;
     position: relative;
-    @include trans;
+    //@include trans;
     @media #{$breakpoint}{
         position: absolute;
         right: 5%;
-        top: 300px;
-        width: 45%;
+        top: 120px;
+        width: 44%;
     }
     h2{
         position:relative;
@@ -87,10 +87,10 @@ p{
     }
     
     .bannerLeft{
-        left: -10%;
+        left: -8%;
     }
     .bannerRight{
-        right: -10%;
+        right: -8%;
     }
         
 }
@@ -114,7 +114,7 @@ body{
     @media #{$breakpoint}{
         position: absolute;
         width: 45%;
-        left: 5%;
+        left: 2%;
         top: 0;
     }
     img{
@@ -130,7 +130,7 @@ body{
     @media #{$breakpoint}{
         position: absolute;
         top: 35px;
-        left: 5%;
+        left: 2%;
         width: 45%;
     }
     img{
@@ -138,13 +138,32 @@ body{
     }
 }
 
+
+.graphics{
+    @media #{$breakpoint}{
+        position: relative;
+        margin-bottom: 55%;
+        text-align:center;
+    }
+}
+
+
+
+
 .graphic{
-    display:none;
     background: transparent;
     position: relative;
     width: 70%;
     margin: 25px auto;
     text-align: center;
+    
+    @media #{$breakpoint}{
+        //clear: both;
+        float: left;
+        width: 27%;
+        margin: 0 3%;
+    }
+        
     img{
        @include trans;
         width: 100%;
@@ -222,7 +241,7 @@ body{
     @media #{$breakpoint}{
         width: 45%;
         position: absolute;
-        top: 400px;
+        top: 325px;
         right: 5%;
     }
     h5{
