--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
 
 a {
   -webkit-transition: all 500ms ease-in;
-  -mox-transition: all 500ms ease-in;
+  -moz-transition: all 500ms ease-in;
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
@@ -76,7 +76,7 @@ body {
   margin: 0 auto;
   padding: 6px 5%;
   -webkit-transition: all 500ms ease-in;
-  -mox-transition: all 500ms ease-in;
+  -moz-transition: all 500ms ease-in;
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
@@ -95,7 +95,7 @@ body {
   margin: 0 auto;
   width: 90%;
   -webkit-transition: all 500ms ease-in;
-  -mox-transition: all 500ms ease-in;
+  -moz-transition: all 500ms ease-in;
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
@@ -124,10 +124,10 @@ body {
     .graphic {
       float: left;
       width: 27%;
-      margin: 0 3%; } }
+      margin: 0 3% 100px 3%; } }
   .graphic img {
     -webkit-transition: all 500ms ease-in;
-    -mox-transition: all 500ms ease-in;
+    -moz-transition: all 500ms ease-in;
     -ms-transition: all 500ms ease-in;
     -o-transition: all 500ms ease-in;
     transition: all 500ms ease-in;
@@ -173,16 +173,51 @@ body {
   margin: 0 auto; }
 
 .content {
-  display: none;
   width: 70%;
   margin: 0 auto;
   text-align: center; }
+  @media screen and (min-width: 769px) {
+    .content {
+      position: relative;
+      top: 500px; } }
   .content p {
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 0; }
+    @media screen and (min-width: 1024px) {
+      .content p {
+        font-size: 18px; } }
   .content h3 {
     font-size: 24px;
     margin-bottom: 8px; }
+    @media screen and (min-width: 769px) {
+      .content h3 {
+        width: 60%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        text-align: left;
+        margin: 6px 0; } }
+
+.explanation {
+  position: relative; }
+  .explanation img {
+    display: none; }
+    @media screen and (min-width: 769px) {
+      .explanation img {
+        display: block;
+        position: absolute;
+        top: 12px;
+        left: 0;
+        width: 35%; } }
+  @media screen and (min-width: 769px) {
+    .explanation {
+      min-height: 500px; }
+      .explanation p {
+        width: 60%;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        text-align: left; } }
 
 .djs {
   width: 70%;
@@ -209,7 +244,7 @@ body {
   color: white;
   font-family: 'bebas_neueregular', helvetica, arial, sans-serif;
   -webkit-transition: all 500ms ease-in;
-  -mox-transition: all 500ms ease-in;
+  -moz-transition: all 500ms ease-in;
   -ms-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   transition: all 500ms ease-in; }
