--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a {
 
 body {
   background: black;
-  margin: 0;
+  margin: 0 auto;
   min-width: 320px; }
 
 .unionLogos {
@@ -170,7 +170,8 @@ body {
   background-color: black;
   width: 100%;
   height: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  max-width: 1280px; }
 
 .content {
   width: 70%;
