--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,7 @@ $fontBreakpoint: 'screen and (min-width: 1024px)';
     box-sizing:border-box;
 }
 
+
 h1, h2, h3, h4, h5, h6{
     @include bebas;
     color: rgb(245, 245, 245);
@@ -113,8 +114,9 @@ a{
 
 body{
     background: black;
-    margin: 0;
+    margin: 0 auto;
     min-width: 320px;
+    
 }
 
 .unionLogos{
@@ -228,6 +230,7 @@ body{
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    max-width: 1280px;
 }
 
 .content{
