--- a/style.scss
+++ b/style.scss
@@ -59,14 +59,20 @@ p{
    @include tits;
 }
 
+.djs{
 a{
+    text-decoration: none; 
+    border-bottom: 2px solid white;
     &:link, &:visited{
+        margin-bottom: -2px;
         color: white;
     }
     &:hover{
         color: rgb(214, 128, 5);
+        border-bottom-color: rgb(214, 128, 5);
     }
     @include trans;
+}
 }
 
 .date{
@@ -116,15 +122,18 @@ body{
     background: black;
     margin: 0 auto;
     min-width: 320px;
+    max-width: 1280px;
     
 }
 
 .unionLogos{
+    
     width: 90%;
     margin: 0 auto;
     padding: 6px 5%; 
     @include trans;
     @media #{$breakpoint}{
+        max-width: 575px;
         position: absolute;
         width: 45%;
         left: 2%;
@@ -141,6 +150,7 @@ body{
     width: 90%;
     @include trans;
     @media #{$breakpoint}{
+        max-width: 575px;
         position: absolute;
         top: 35px;
         left: 2%;
@@ -232,7 +242,9 @@ body{
     margin: 0 auto;
     max-width: 1280px;
 }
-
+.tophalf{
+    max-width:1280px;
+}
 .content{
     width: 70%;
     margin: 0 auto;
