--- a/style.css
+++ b/style.css
@@ -21,20 +21,22 @@ p {
   color: white;
   font-family: 'Titillium Web', sans-serif; }
 
-.djs a {
-  text-decoration: none;
-  border-bottom: 2px solid white;
-  -webkit-transition: all 500ms ease-in;
-  -moz-transition: all 500ms ease-in;
-  -ms-transition: all 500ms ease-in;
-  -o-transition: all 500ms ease-in;
-  transition: all 500ms ease-in; }
-  .djs a:link, .djs a:visited {
-    margin-bottom: -2px;
-    color: white; }
-  .djs a:hover {
-    color: #d68005;
-    border-bottom-color: #d68005; }
+.djs {
+  max-width: 666px; }
+  .djs a {
+    text-decoration: none;
+    border-bottom: 2px solid white;
+    -webkit-transition: all 500ms ease-in;
+    -moz-transition: all 500ms ease-in;
+    -ms-transition: all 500ms ease-in;
+    -o-transition: all 500ms ease-in;
+    transition: all 500ms ease-in; }
+    .djs a:link, .djs a:visited {
+      margin-bottom: -2px;
+      color: white; }
+    .djs a:hover {
+      color: #d68005;
+      border-bottom-color: #d68005; }
 
 .date {
   width: 80%;
@@ -47,7 +49,8 @@ p {
       position: absolute;
       right: 5%;
       top: 120px;
-      width: 44%; } }
+      width: 44%;
+      max-width: 666px; } }
   .date h2 {
     position: relative;
     text-align: center;
@@ -253,6 +256,7 @@ body {
   text-align: center;
   display: inline-block;
   color: white;
+  max-width: 666px;
   font-family: 'bebas_neueregular', helvetica, arial, sans-serif;
   -webkit-transition: all 500ms ease-in;
   -moz-transition: all 500ms ease-in;
