--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,10 @@ $offBlack: rgb(53,52,53);
 $breakpoint: 'screen and (min-width: 769px)';
 $fontBreakpoint: 'screen and (min-width: 1024px)';
 
+@import "foundation/scss/foundation/variables";
+@import "foundation/scss/foundation/components/global";
+@import "foundation/scss/foundation/components/grid";
+
 @font-face {
     font-family: 'bebas_neueregular';
     src: url('fonts/bebasneue-webfont.eot');
